Fixed footer background not covering full width.

--- a/packages/inkline.io/pages/index.scss
+++ b/packages/inkline.io/pages/index.scss
@@ -168,7 +168,7 @@
     background-image: url('../static/images/pages/index-footer.svg');
     background-color: colors('gray-80');
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 110% auto;
     background-position: center -1px;
     color: colors('gray-20');
     padding: ($spacer * 6) 0 ($spacer * 4);
